--- a/nometa-ui/src/assets/base.css
+++ b/nometa-ui/src/assets/base.css
@@ -1,15 +1,20 @@
-/* color palette from <https://github.com/vuejs/theme> */
+/* color palette from <https://github.com/vuejs/theme> with custom entries */
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
+
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
-  --vt-c-black: #181818;
+  --vt-c-black: #1e1e1e;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
-  --vt-c-indigo: #2c3e50;
-  --vt-c-mint: #00d6a8;
+  --vt-c-green: #00a35c;
+  --vt-c-bhue-black: #242326;
+  --vt-c-bhue-black-soft: #29282b;
+  --vt-c-pink: #e40cc7;
+
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -25,9 +30,8 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-black);
-  --color-background-soft: var(--vt-c-black-soft);
-  --color-background-mute: var(--vt-c-black-mute);
+  --color-background: var(--vt-c-bhue-black);
+  --color-background-soft: var(--vt-c-bhue-black-soft);
 
   --color-border: var(--vt-c-divider-dark-2);
   --color-border-hover: var(--vt-c-divider-dark-1);
@@ -41,7 +45,8 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: light) {
+/* We have this removed because we are not using a light mode */
+/* @media (prefers-color-scheme: light) {
   :root {
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
@@ -55,17 +60,21 @@
 
     --color-primary: var(--vt-c-mint);
   }
-}
+} */
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
   font-weight: normal;
+  font-style: normal;
+  font-size: 15px;
 }
 
-body {
+html, body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
@@ -73,21 +82,20 @@ body {
     color 0.5s,
     background-color 0.5s; */
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, p, span, li {
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 15px;
 }
